src/app/features/home/capture-tab/capture-tab.component.scss
:host {
  display: block;
  padding-left: 16px;
  padding-right: 16px;
  margin-bottom: 128px;
}

.loading-spinner-container {
  width: fit-content;
  margin: 32px auto;
}

div.mat-title {
  margin: 26px 0 0;
  font-size: large;
}

.capture-item {
  height: 30vw;
  overflow: hidden;
  object-fit: cover;
  border-radius: 4px;

  .collecting-spinner-container {
    position: absolute;
    top: 50%;
    left: 50%;
    margin-right: -50%;
    transform: translate(-50%, -50%);
    z-index: 9;

    ion-spinner {
      width: 48px;
      height: 48px;
      opacity: 50%;

      --color: white;
    }
  }

  ion-icon {
    color: white;
    z-index: 10;
  }

  ion-icon.collecting {
    position: absolute;
    top: 50%;
    left: 50%;
    margin-right: -50%;
    transform: translate(-50%, -50%);
    opacity: 30%;
    font-size: 24px;
  }

  ion-icon.uploaded {
    position: absolute;
    top: 8px;
    right: 8px;
    font-size: 20px;
    opacity: 30%;
  }

  ion-icon.located {
    position: absolute;
    top: 32px;
    right: 8px;
    font-size: 20px;
    opacity: 30%;
  }

  img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: inherit;
  }
}

